# unitlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  unitlibConfig.cmake.in
hooks/: pre-commit
include/: unitlib.h  unitlib.hpp
test/: test.cpp
tests/: CMakeLists.txt  test.cpp
